[tool.poetry]
name = "gw-networks"
version = "0.1.0"
description = ""
authors = ["Mao Nishino <mao1756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
scipy = "^1.14.0"
pot = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
